Removed duplicated trips, increased size to 500K

--- a/preprocessing/PortoTaxi/porto_taxi_preprocessing.ipynb
+++ b/preprocessing/PortoTaxi/porto_taxi_preprocessing.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-26T14:38:49.431139Z",
-     "start_time": "2024-05-26T14:38:49.427564Z"
+     "end_time": "2024-05-26T22:13:42.460335Z",
+     "start_time": "2024-05-26T22:13:41.372725Z"
     }
    },
    "source": [
@@ -33,14 +33,23 @@
     "from tqdm.autonotebook import tqdm\n",
     "from tqdm.contrib.concurrent import process_map"
    ],
-   "outputs": [],
-   "execution_count": 38
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jakub\\AppData\\Local\\Temp\\ipykernel_54088\\4292766932.py:14: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import tqdm\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:46:44.973230Z",
-     "start_time": "2024-05-26T12:46:44.971050Z"
+     "end_time": "2024-05-26T22:13:42.464039Z",
+     "start_time": "2024-05-26T22:13:42.461340Z"
     }
    },
    "cell_type": "code",
@@ -58,8 +67,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:46:44.977768Z",
-     "start_time": "2024-05-26T12:46:44.974237Z"
+     "end_time": "2024-05-26T22:13:42.468424Z",
+     "start_time": "2024-05-26T22:13:42.464039Z"
     }
    },
    "cell_type": "code",
@@ -69,7 +78,7 @@
     "upper_limit = 240  # 1 hour\n",
     "\n",
     "# whole dataset (~1.5mln) is too big, have to use subset\n",
-    "subset_size = 100_000\n",
+    "subset_size = 500_000\n",
     "\n",
     "# multiprocessing\n",
     "chunk_size = 1000\n",
@@ -100,8 +109,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:46:44.982092Z",
-     "start_time": "2024-05-26T12:46:44.977768Z"
+     "end_time": "2024-05-26T22:13:42.472700Z",
+     "start_time": "2024-05-26T22:13:42.469428Z"
     }
    },
    "id": "51f07e2957e862d1",
@@ -114,8 +123,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:46:59.144262Z",
-     "start_time": "2024-05-26T12:46:44.982092Z"
+     "end_time": "2024-05-26T22:13:56.565002Z",
+     "start_time": "2024-05-26T22:13:42.472700Z"
     }
    },
    "id": "9756eb32645284c6",
@@ -143,8 +152,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:46:59.148776Z",
-     "start_time": "2024-05-26T12:46:59.145268Z"
+     "end_time": "2024-05-26T22:13:56.568048Z",
+     "start_time": "2024-05-26T22:13:56.565002Z"
     }
    },
    "id": "fb00b618a3a21f93",
@@ -157,8 +166,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:46:59.160799Z",
-     "start_time": "2024-05-26T12:46:59.149783Z"
+     "end_time": "2024-05-26T22:13:56.577553Z",
+     "start_time": "2024-05-26T22:13:56.568048Z"
     }
    },
    "id": "b10b2077e693ef14",
@@ -302,8 +311,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:46:59.219408Z",
-     "start_time": "2024-05-26T12:46:59.160799Z"
+     "end_time": "2024-05-26T22:13:56.637493Z",
+     "start_time": "2024-05-26T22:13:56.577553Z"
     }
    },
    "id": "e130cab37678626e",
@@ -316,13 +325,32 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:46:59.276327Z",
-     "start_time": "2024-05-26T12:46:59.219408Z"
+     "end_time": "2024-05-26T22:13:56.696442Z",
+     "start_time": "2024-05-26T22:13:56.638497Z"
     }
    },
    "id": "7050b9d82174819f",
    "outputs": [],
    "execution_count": 9
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Drop duplicates",
+   "id": "da5266691103d802"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-26T22:13:56.870163Z",
+     "start_time": "2024-05-26T22:13:56.697445Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_porto_taxi.drop_duplicates(subset=\"trip_id\", keep=False, inplace=True)",
+   "id": "6e4678560d42c0b5",
+   "outputs": [],
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -333,8 +361,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:47:55.433443Z",
-     "start_time": "2024-05-26T12:46:59.276327Z"
+     "end_time": "2024-05-26T22:14:55.065780Z",
+     "start_time": "2024-05-26T22:13:56.870163Z"
     }
    },
    "cell_type": "code",
@@ -351,19 +379,19 @@
     {
      "data": {
       "text/plain": [
-       "  0%|          | 0/1710660 [00:00<?, ?it/s]"
+       "  0%|          | 0/1710499 [00:00<?, ?it/s]"
       ],
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "901f15ac5f884983b37226ed692adb53"
+       "model_id": "4f6d2b3023e94d89918c11e3e9e2fcc4"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 10
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -374,8 +402,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:48:03.930343Z",
-     "start_time": "2024-05-26T12:47:55.434445Z"
+     "end_time": "2024-05-26T22:15:04.514268Z",
+     "start_time": "2024-05-26T22:14:55.066783Z"
     }
    },
    "cell_type": "code",
@@ -389,25 +417,25 @@
     {
      "data": {
       "text/plain": [
-       "  0%|          | 0/1710660 [00:00<?, ?it/s]"
+       "  0%|          | 0/1710499 [00:00<?, ?it/s]"
       ],
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "731e094ad2cd49c2a97cad1d194bd2c1"
+       "model_id": "97784e159295463c972c50de928e4462"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 11
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:48:04.348217Z",
-     "start_time": "2024-05-26T12:48:03.930343Z"
+     "end_time": "2024-05-26T22:15:07.175802Z",
+     "start_time": "2024-05-26T22:15:04.515272Z"
     }
    },
    "cell_type": "code",
@@ -422,7 +450,7 @@
    ],
    "id": "be0fa38b9b1c80c1",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -436,8 +464,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:48:04.861357Z",
-     "start_time": "2024-05-26T12:48:04.348720Z"
+     "end_time": "2024-05-26T22:15:07.775290Z",
+     "start_time": "2024-05-26T22:15:07.176805Z"
     }
    },
    "cell_type": "code",
@@ -448,20 +476,20 @@
    ],
    "id": "dc4ebfd5db36621",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:48:04.870882Z",
-     "start_time": "2024-05-26T12:48:04.862359Z"
+     "end_time": "2024-05-26T22:15:07.826639Z",
+     "start_time": "2024-05-26T22:15:07.776293Z"
     }
    },
    "cell_type": "code",
    "source": "df_porto_taxi_subset.drop(\"length\", axis=1, inplace=True)",
    "id": "eeeb782724da43a2",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -475,8 +503,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:48:07.504691Z",
-     "start_time": "2024-05-26T12:48:04.870882Z"
+     "end_time": "2024-05-26T22:15:11.797851Z",
+     "start_time": "2024-05-26T22:15:07.827750Z"
     }
    },
    "cell_type": "code",
@@ -492,15 +520,15 @@
     {
      "data": {
       "text/plain": [
-       "47"
+       "38"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 16
   },
   {
    "metadata": {},
@@ -511,8 +539,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:48:10.673832Z",
-     "start_time": "2024-05-26T12:48:07.504691Z"
+     "end_time": "2024-05-26T22:15:22.932927Z",
+     "start_time": "2024-05-26T22:15:11.797851Z"
     }
    },
    "cell_type": "code",
@@ -529,19 +557,19 @@
     {
      "data": {
       "text/plain": [
-       "  0%|          | 0/100000 [00:00<?, ?it/s]"
+       "  0%|          | 0/500000 [00:00<?, ?it/s]"
       ],
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "636fca2af2254716b1845155f8947b33"
+       "model_id": "4aa3416ebc714b119eb8dc043d16a228"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 16
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -552,8 +580,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:48:56.465894Z",
-     "start_time": "2024-05-26T12:48:10.673832Z"
+     "end_time": "2024-05-26T22:19:20.448954Z",
+     "start_time": "2024-05-26T22:15:22.933930Z"
     }
    },
    "cell_type": "code",
@@ -578,19 +606,19 @@
     {
      "data": {
       "text/plain": [
-       "  0%|          | 0/100000 [00:00<?, ?it/s]"
+       "  0%|          | 0/500000 [00:00<?, ?it/s]"
       ],
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "25fa6cb25d2d4cbca571dd7bcff19fb8"
+       "model_id": "d6207c9e03564f598d5009116bd1bda5"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 17
+   "execution_count": 18
   },
   {
    "metadata": {},
@@ -601,8 +629,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:49:03.857525Z",
-     "start_time": "2024-05-26T12:48:56.466898Z"
+     "end_time": "2024-05-26T22:19:56.110842Z",
+     "start_time": "2024-05-26T22:19:20.449958Z"
     }
    },
    "cell_type": "code",
@@ -613,13 +641,13 @@
    ],
    "id": "891ddb31b23c72db",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:49:04.763393Z",
-     "start_time": "2024-05-26T12:49:03.858527Z"
+     "end_time": "2024-05-26T22:19:58.878426Z",
+     "start_time": "2024-05-26T22:19:56.111845Z"
     }
    },
    "cell_type": "code",
@@ -636,18 +664,18 @@
        "18"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 19
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:49:09.403485Z",
-     "start_time": "2024-05-26T12:49:04.764396Z"
+     "end_time": "2024-05-26T22:20:13.161347Z",
+     "start_time": "2024-05-26T22:19:58.878426Z"
     }
    },
    "cell_type": "code",
@@ -658,7 +686,7 @@
    ],
    "id": "6c7d27c601fd9018",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 21
   },
   {
    "metadata": {},
@@ -669,34 +697,34 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:49:09.952191Z",
-     "start_time": "2024-05-26T12:49:09.404487Z"
+     "end_time": "2024-05-26T22:20:14.156213Z",
+     "start_time": "2024-05-26T22:20:13.162352Z"
     }
    },
    "cell_type": "code",
    "source": "porto_area = geocode_to_region_gdf(\"Porto District, Portugal\")",
    "id": "5f9c949e1eb503e0",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:53:52.599355Z",
-     "start_time": "2024-05-26T12:49:09.953193Z"
+     "end_time": "2024-05-26T22:34:18.448579Z",
+     "start_time": "2024-05-26T22:20:14.156213Z"
     }
    },
    "cell_type": "code",
    "source": "gdf_porto_taxi_points_inside_porto = gdf_porto_taxi_points.sjoin(porto_area)",
    "id": "883d716068dd7ba0",
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:54:09.350542Z",
-     "start_time": "2024-05-26T12:53:52.600436Z"
+     "end_time": "2024-05-26T22:35:14.613308Z",
+     "start_time": "2024-05-26T22:34:18.449583Z"
     }
    },
    "cell_type": "code",
@@ -708,13 +736,13 @@
    ],
    "id": "39b4abe3e896dc62",
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:54:09.353302Z",
-     "start_time": "2024-05-26T12:54:09.350542Z"
+     "end_time": "2024-05-26T22:35:14.619338Z",
+     "start_time": "2024-05-26T22:35:14.613308Z"
     }
    },
    "cell_type": "code",
@@ -725,13 +753,13 @@
    ],
    "id": "81e5148041674008",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:54:10.015498Z",
-     "start_time": "2024-05-26T12:54:09.353302Z"
+     "end_time": "2024-05-26T22:35:17.192347Z",
+     "start_time": "2024-05-26T22:35:14.620344Z"
     }
    },
    "cell_type": "code",
@@ -742,7 +770,7 @@
    ],
    "id": "4af47d9500bff81e",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 26
   },
   {
    "metadata": {},
@@ -753,8 +781,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:59:24.081705Z",
-     "start_time": "2024-05-26T12:54:10.016543Z"
+     "end_time": "2024-05-26T22:49:34.175747Z",
+     "start_time": "2024-05-26T22:35:17.192347Z"
     }
    },
    "cell_type": "code",
@@ -765,7 +793,7 @@
    ],
    "id": "a2085c8c32fa4a52",
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 27
   },
   {
    "metadata": {},
@@ -776,8 +804,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:02:26.854114Z",
-     "start_time": "2024-05-26T12:59:24.082712Z"
+     "end_time": "2024-05-26T22:55:58.946770Z",
+     "start_time": "2024-05-26T22:49:34.180749Z"
     }
    },
    "cell_type": "code",
@@ -791,15 +819,15 @@
     {
      "data": {
       "text/plain": [
-       "TrajectoryCollection with 99720 trajectories"
+       "TrajectoryCollection with 498557 trajectories"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 27
+   "execution_count": 28
   },
   {
    "metadata": {},
@@ -810,8 +838,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:14:44.821307Z",
-     "start_time": "2024-05-26T13:02:26.854114Z"
+     "end_time": "2024-05-26T23:46:44.827330Z",
+     "start_time": "2024-05-26T22:55:58.947775Z"
     }
    },
    "cell_type": "code",
@@ -822,13 +850,13 @@
    ],
    "id": "a2fc5975420d4048",
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:14:44.911072Z",
-     "start_time": "2024-05-26T13:14:44.821307Z"
+     "end_time": "2024-05-26T23:46:45.228551Z",
+     "start_time": "2024-05-26T23:46:44.828335Z"
     }
    },
    "cell_type": "code",
@@ -841,13 +869,13 @@
    ],
    "id": "23e1775137f2198b",
    "outputs": [],
-   "execution_count": 29
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:17:39.247308Z",
-     "start_time": "2024-05-26T13:14:44.911072Z"
+     "end_time": "2024-05-27T00:01:11.078583Z",
+     "start_time": "2024-05-26T23:46:45.228551Z"
     }
    },
    "cell_type": "code",
@@ -858,7 +886,7 @@
    ],
    "id": "7f976c6b684528fe",
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 31
   },
   {
    "metadata": {},
@@ -869,8 +897,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:21:06.749486Z",
-     "start_time": "2024-05-26T13:17:39.247308Z"
+     "end_time": "2024-05-27T00:17:51.633340Z",
+     "start_time": "2024-05-27T00:01:11.079586Z"
     }
    },
    "cell_type": "code",
@@ -881,7 +909,7 @@
    ],
    "id": "a17139f943eaee9a",
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 32
   },
   {
    "metadata": {},
@@ -895,8 +923,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:22:03.515690Z",
-     "start_time": "2024-05-26T13:21:06.749486Z"
+     "end_time": "2024-05-27T00:23:28.384816Z",
+     "start_time": "2024-05-27T00:17:51.635343Z"
     }
    },
    "cell_type": "code",
@@ -910,15 +938,15 @@
     {
      "data": {
       "text/plain": [
-       "TrajectoryCollection with 99720 trajectories"
+       "TrajectoryCollection with 498556 trajectories"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 32
+   "execution_count": 33
   },
   {
    "metadata": {},
@@ -929,8 +957,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:22:18.790424Z",
-     "start_time": "2024-05-26T13:22:03.515690Z"
+     "end_time": "2024-05-27T00:24:08.079771Z",
+     "start_time": "2024-05-27T00:23:28.386820Z"
     }
    },
    "cell_type": "code",
@@ -941,20 +969,20 @@
    ],
    "id": "4857108bd0af500e",
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:22:18.797306Z",
-     "start_time": "2024-05-26T13:22:18.790424Z"
+     "end_time": "2024-05-27T00:24:08.099538Z",
+     "start_time": "2024-05-27T00:24:08.079771Z"
     }
    },
    "cell_type": "code",
    "source": "gdf_trajectory_point_collection.reset_index(inplace=True)",
    "id": "147e1e6b3d89f8c6",
    "outputs": [],
-   "execution_count": 34
+   "execution_count": 35
   },
   {
    "metadata": {},
@@ -971,8 +999,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:22:19.337969Z",
-     "start_time": "2024-05-26T13:22:18.798311Z"
+     "end_time": "2024-05-27T00:24:11.425510Z",
+     "start_time": "2024-05-27T00:24:08.100542Z"
     }
    },
    "cell_type": "code",
@@ -984,20 +1012,20 @@
    ],
    "id": "a1de745b8da63cf9",
    "outputs": [],
-   "execution_count": 35
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:22:19.403891Z",
-     "start_time": "2024-05-26T13:22:19.337969Z"
+     "end_time": "2024-05-27T00:24:11.741112Z",
+     "start_time": "2024-05-27T00:24:11.426514Z"
     }
    },
    "cell_type": "code",
    "source": "gdf_trajectory_point_collection.drop(\"geometry\", axis=1, inplace=True)",
    "id": "602b5c10a6ba9f0e",
    "outputs": [],
-   "execution_count": 36
+   "execution_count": 37
   },
   {
    "metadata": {},
@@ -1008,8 +1036,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T14:52:18.460585Z",
-     "start_time": "2024-05-26T14:52:17.061633Z"
+     "end_time": "2024-05-27T00:24:18.407042Z",
+     "start_time": "2024-05-27T00:24:11.742384Z"
     }
    },
    "cell_type": "code",
@@ -1020,7 +1048,7 @@
    ],
    "id": "3c9df4813f21c54c",
    "outputs": [],
-   "execution_count": 55
+   "execution_count": 38
   },
   {
    "metadata": {},
@@ -1031,8 +1059,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T14:52:21.714636Z",
-     "start_time": "2024-05-26T14:52:20.962094Z"
+     "end_time": "2024-05-27T00:24:22.295078Z",
+     "start_time": "2024-05-27T00:24:18.408047Z"
     }
    },
    "cell_type": "code",
@@ -1041,7 +1069,7 @@
    ],
    "id": "fb508f396a85e233",
    "outputs": [],
-   "execution_count": 56
+   "execution_count": 39
   }
  ],
  "metadata": {
